// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/AvatarGroup AnimateX smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <div class="flex items-center justify-center -space-x-4 rtl:space-x-reverse text-white relative"
         role="group"
         aria-label="Avatar group"
    >
      <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl transition-all duration-300 hover:translate-x-2">
        <img class="w-full h-full object-cover rounded-full"
             src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
             alt="User 1"
        >
      </div>
      <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl transition-all duration-300 hover:translate-x-2">
        <img class="w-full h-full object-cover rounded-full"
             src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
             alt="User 2"
        >
      </div>
      <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl transition-all duration-300 hover:translate-x-2">
        <img class="w-full h-full object-cover rounded-full"
             src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
             alt="User 3"
        >
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/AvatarGroup Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex items-center justify-center -space-x-4 rtl:space-x-reverse text-white relative"
       role="group"
       aria-label="Avatar group"
  >
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 1"
      >
    </div>
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 2"
      >
    </div>
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 3"
      >
    </div>
  </div>
</div>
`;

exports[`Elements/AvatarGroup RTLSupport smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div dir="rtl">
    <div class="flex items-center justify-center -space-x-4 rtl:space-x-reverse text-white relative"
         role="group"
         aria-label="Avatar group"
    >
      <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
        <img class="w-full h-full object-cover rounded-full"
             src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
             alt="User 1"
        >
      </div>
      <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
        <img class="w-full h-full object-cover rounded-full"
             src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
             alt="User 2"
        >
      </div>
      <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
        <img class="w-full h-full object-cover rounded-full"
             src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
             alt="User 3"
        >
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/AvatarGroup WithMoreAvatars smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex items-center justify-center -space-x-4 rtl:space-x-reverse text-white relative"
       role="group"
       aria-label="Avatar group"
  >
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 1"
      >
    </div>
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 2"
      >
    </div>
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 3"
      >
    </div>
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 4"
      >
    </div>
    <div class="h-20 w-20 overflow-hidden relative flex justify-center items-center text-center text-2xl">
      <img class="w-full h-full object-cover rounded-full"
           src="https://html.vristo.sbthemes.com/assets/images/profile-12.jpeg"
           alt="User 5"
      >
    </div>
  </div>
</div>
`;
